Added CarHovUserServiceTest and RideScheduleServiceTest